--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
         line-height: 1.6;
       }
 
-      /* Centered layout container */
+      /* Full-width layout container to use the entire viewport width. */
       .container {
-        max-width: 1200px;
+        width: 100%;
+        max-width: 100%;
         margin: 0 auto;
-        padding: 0 1.25rem;
+        padding: 0 clamp(1.25rem, 3vw, 2.5rem);
       }
 
       /* Minimal header with only app title, active module, and descriptor. */
@@ -77,9 +78,10 @@
         margin-top: 0.2rem;
       }
 
+      /* Allow header copy to span the full layout width. */
       .header-description {
         margin-top: 0.35rem;
-        max-width: 760px;
+        max-width: 100%;
         color: var(--ink-muted);
       }
 
