--- a/index.html
+++ b/index.html
@@ -228,10 +228,12 @@
         margin-bottom: 0.4rem;
       }
 
-      /* Two-panel tracker layout: encounter tools on the left, tracker on the right. */
+      /* Two-panel tracker layout: encounter drawer on the left, tracker on the right. */
       .tracker-layout {
+        --drawer-width-expanded: 380px;
+        --drawer-width-collapsed: 3.5rem;
         display: grid;
-        grid-template-columns: minmax(0, 0.9fr) minmax(0, 2.1fr);
+        grid-template-columns: minmax(0, var(--drawer-width-expanded)) minmax(0, 1fr);
         gap: 1.1rem;
         margin-top: 0.8rem;
         align-items: start;
@@ -239,11 +241,7 @@
 
       /* When encounter tools are hidden, allow the tracker to span the full width. */
       .tracker-layout.is-collapsed {
-        grid-template-columns: minmax(0, 1fr);
-      }
-
-      .tracker-layout.is-collapsed .encounter-side-panel {
-        display: none;
+        grid-template-columns: var(--drawer-width-collapsed) minmax(0, 1fr);
       }
 
       /* Encounter library sidebar gives the GM quick access to saved encounters. */
@@ -313,11 +311,102 @@
         margin-bottom: 0.8rem;
       }
 
-      /* Side panel keeps encounter setup and library grouped together. */
+      /* Support nested panel headings for grouped encounter content. */
+      .tracker-panel h4,
+      .tracker-panel h5 {
+        font-family: var(--serif);
+        margin-bottom: 0.6rem;
+        color: var(--gold-bright);
+      }
+
+      /* Sliding encounter drawer keeps encounter setup and library grouped together. */
+      .encounter-drawer {
+        position: relative;
+        overflow: hidden;
+        width: var(--drawer-width-expanded);
+        min-height: 100%;
+        transition: transform 0.35s ease;
+      }
+
+      /* Drawer card gives a modal-like shell to connect library and setup content. */
+      .encounter-drawer__card {
+        background: rgba(42, 32, 24, 0.98);
+        border-radius: 18px;
+        border: 1px solid rgba(201, 162, 74, 0.6);
+        box-shadow: 0 18px 28px var(--shadow);
+        overflow: hidden;
+      }
+
+      /* Drawer header keeps the label anchored to the container. */
+      .encounter-drawer__header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 0.8rem;
+        padding: 0.9rem 1rem;
+        background: linear-gradient(90deg, rgba(60, 45, 33, 0.95), rgba(38, 29, 21, 0.95));
+        border-bottom: 1px solid rgba(201, 162, 74, 0.4);
+      }
+
+      .encounter-drawer__header-title {
+        font-family: var(--serif);
+        font-size: 1rem;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+        color: var(--gold-bright);
+      }
+
+      /* Drawer toggle is integrated into the header for a unified surface. */
+      .encounter-drawer__toggle {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 2.4rem;
+        height: 2.4rem;
+        border-radius: 12px;
+        background: rgba(201, 162, 74, 0.18);
+        border: 1px solid rgba(201, 162, 74, 0.6);
+        color: var(--gold-bright);
+        font-weight: 700;
+        transition: transform 0.3s ease, box-shadow 0.2s ease;
+      }
+
+      .encounter-drawer__toggle:hover,
+      .encounter-drawer__toggle:focus-visible {
+        transform: translateY(-2px);
+        box-shadow: 0 10px 18px var(--shadow);
+        outline: none;
+      }
+
+      .encounter-drawer__toggle-icon {
+        display: inline-flex;
+        font-size: 1rem;
+        transition: transform 0.3s ease;
+      }
+
+      .tracker-layout.is-collapsed .encounter-drawer__toggle-icon {
+        transform: rotate(180deg);
+      }
+
+      /* Drawer body keeps the grouped panels inside the modal-like container. */
+      .encounter-drawer__body {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 1rem;
+        background: rgba(32, 24, 17, 0.92);
+      }
+
+      /* Drawer content slides to create a side-tray animation. */
       .encounter-side-panel {
         display: flex;
         flex-direction: column;
         gap: 1.1rem;
+        width: var(--drawer-width-expanded);
+      }
+
+      .tracker-layout.is-collapsed .encounter-drawer {
+        transform: translateX(calc(-1 * (var(--drawer-width-expanded) - var(--drawer-width-collapsed))));
       }
 
       /* Main tracker panel stacks round controls and initiative list. */
@@ -352,7 +441,7 @@
         margin-bottom: 1rem;
       }
 
-      .encounter-manager h4 {
+      .encounter-manager h5 {
         font-family: var(--serif);
         margin-bottom: 0.6rem;
         color: var(--gold-bright);
@@ -754,16 +843,6 @@
           <button id="initiative-back" class="ghost" type="button">
             ← Back to Dashboard
           </button>
-          <!-- Toggle to reveal or hide the encounter management side panel. -->
-          <button
-            id="encounter-panel-toggle"
-            class="ghost"
-            type="button"
-            aria-expanded="false"
-            aria-controls="encounter-side-panel"
-          >
-            Show Encounter Tools
-          </button>
         </div>
 
         <section class="initiative-tracker" aria-label="Initiative tracker workspace">
@@ -772,77 +851,91 @@
             round-by-round conditions with automatic expiry reminders.
           </p>
           <div class="tracker-layout is-collapsed" id="tracker-layout">
-            <aside
-              class="encounter-side-panel"
-              id="encounter-side-panel"
-              aria-label="Encounter setup and library"
-            >
-              <div class="tracker-panel encounter-library">
-                <h3>Encounter Library</h3>
-                <p class="helper-text">
-                  Create a new encounter or load a saved roster into the tracker.
-                </p>
-                <button id="create-encounter" type="button">Create New Encounter</button>
-                <ul id="encounter-list" class="encounter-list" aria-label="Saved encounters"></ul>
-              </div>
-              <div class="tracker-panel">
-                <h3>Encounter Setup</h3>
-                <div class="encounter-manager">
-                  <h4>Encounter Name</h4>
-                  <div class="field-row field-row--encounter-name">
-                    <div>
-                      <label for="encounter-name">Encounter name</label>
-                      <input
-                        id="encounter-name"
-                        name="encounter-name"
-                        type="text"
-                        placeholder="e.g. Crimson Guard Ambush"
-                      />
+            <aside class="encounter-drawer" id="encounter-side-panel" aria-label="Encounter setup and library">
+              <!-- Drawer card keeps encounter library and setup unified as a single container. -->
+              <div class="encounter-drawer__card encounter-side-panel" id="encounter-panel-content">
+                <header class="encounter-drawer__header">
+                  <h3 class="encounter-drawer__header-title">Encounter Library</h3>
+                  <button
+                    id="encounter-panel-toggle"
+                    class="encounter-drawer__toggle"
+                    type="button"
+                    aria-expanded="false"
+                    aria-controls="encounter-panel-content"
+                    aria-label="Expand Encounter Library"
+                  >
+                    <span class="encounter-drawer__toggle-icon" aria-hidden="true">▸</span>
+                  </button>
+                </header>
+                <div class="encounter-drawer__body">
+                  <div class="tracker-panel encounter-library">
+                    <h4>Library</h4>
+                    <p class="helper-text">
+                      Create a new encounter or load a saved roster into the tracker.
+                    </p>
+                    <button id="create-encounter" type="button">Create New Encounter</button>
+                    <ul id="encounter-list" class="encounter-list" aria-label="Saved encounters"></ul>
+                  </div>
+                  <div class="tracker-panel">
+                    <h4>Setup</h4>
+                    <div class="encounter-manager">
+                      <h5>Encounter Name</h5>
+                      <div class="field-row field-row--encounter-name">
+                        <div>
+                          <label for="encounter-name">Encounter name</label>
+                          <input
+                            id="encounter-name"
+                            name="encounter-name"
+                            type="text"
+                            placeholder="e.g. Crimson Guard Ambush"
+                          />
+                        </div>
+                      </div>
+                      <p class="helper-text" id="encounter-status-note">
+                        Build multiple encounters and save them to browser memory for quick swaps.
+                      </p>
+                    </div>
+                    <form id="participant-form">
+                      <div class="field-row field-row--participant">
+                        <div>
+                          <label for="participant-name">Participant name</label>
+                          <input
+                            id="participant-name"
+                            name="participant-name"
+                            type="text"
+                            placeholder="e.g. Sir Garrick"
+                            required
+                          />
+                        </div>
+                        <div>
+                          <label for="participant-type">Type</label>
+                          <select id="participant-type" name="participant-type">
+                            <option value="Player">Player</option>
+                            <option value="NPC">NPC</option>
+                            <option value="Monster">Monster</option>
+                          </select>
+                        </div>
+                        <div id="participant-cr-field" class="is-hidden">
+                          <label for="participant-cr">CR (XP)</label>
+                          <select id="participant-cr" name="participant-cr"></select>
+                        </div>
+                        <div>
+                          <button type="submit">Add</button>
+                        </div>
+                      </div>
+                    </form>
+                    <div class="initiative-controls">
+                      <button id="save-encounter" class="secondary" type="button">Save / Update</button>
+                    </div>
+                    <p class="notice">
+                      Tip: Use the “Begin Encounter” button in the tracker to open the initiative lightbox and capture
+                      rolls for everyone in the roster.
+                    </p>
+                    <div class="legend">
+                      <span>Highlight = current turn</span>
+                      <span>Prompt = marker ready to expire</span>
                     </div>
                   </div>
-                  <p class="helper-text" id="encounter-status-note">
-                    Build multiple encounters and save them to browser memory for quick swaps.
-                  </p>
-                </div>
-                <form id="participant-form">
-                  <div class="field-row field-row--participant">
-                    <div>
-                      <label for="participant-name">Participant name</label>
-                      <input
-                        id="participant-name"
-                        name="participant-name"
-                        type="text"
-                        placeholder="e.g. Sir Garrick"
-                        required
-                      />
-                    </div>
-                    <div>
-                      <label for="participant-type">Type</label>
-                      <select id="participant-type" name="participant-type">
-                        <option value="Player">Player</option>
-                        <option value="NPC">NPC</option>
-                        <option value="Monster">Monster</option>
-                      </select>
-                    </div>
-                    <div id="participant-cr-field" class="is-hidden">
-                      <label for="participant-cr">CR (XP)</label>
-                      <select id="participant-cr" name="participant-cr"></select>
-                    </div>
-                    <div>
-                      <button type="submit">Add</button>
-                    </div>
-                  </div>
-                </form>
-                <div class="initiative-controls">
-                  <button id="save-encounter" class="secondary" type="button">Save / Update</button>
-                </div>
-                <p class="notice">
-                  Tip: Use the “Begin Encounter” button in the tracker to open the initiative lightbox and capture
-                  rolls for everyone in the roster.
-                </p>
-                <div class="legend">
-                  <span>Highlight = current turn</span>
-                  <span>Prompt = marker ready to expire</span>
                 </div>
               </div>
             </aside>
@@ -1115,7 +1208,7 @@
       const initiativeBack = document.getElementById("initiative-back");
       const encounterPanelToggle = document.getElementById("encounter-panel-toggle");
       const trackerLayout = document.getElementById("tracker-layout");
-      const encounterSidePanel = document.getElementById("encounter-side-panel");
+      const encounterPanelContent = document.getElementById("encounter-panel-content");
 
       // Single source of truth for header copy across dashboard and module views.
       const headerCopy = {
@@ -1138,12 +1231,16 @@
         headerDescription.textContent = copy.description;
       };
 
-      // Control visibility and accessibility state for the encounter side panel.
+      // Control visibility and accessibility state for the encounter drawer toggle.
       const setEncounterPanelVisibility = (isVisible) => {
         trackerLayout.classList.toggle("is-collapsed", !isVisible);
         encounterPanelToggle.setAttribute("aria-expanded", String(isVisible));
-        encounterSidePanel.setAttribute("aria-hidden", String(!isVisible));
-        encounterPanelToggle.textContent = isVisible ? "Hide Encounter Tools" : "Show Encounter Tools";
+        encounterPanelContent.setAttribute("aria-hidden", String(!isVisible));
+        encounterPanelToggle.setAttribute(
+          "aria-label",
+          isVisible ? "Collapse Encounter Library" : "Expand Encounter Library"
+        );
+        encounterPanelToggle.title = isVisible ? "Collapse Encounter Library" : "Expand Encounter Library";
       };
 
       // Utility helpers keep state changes predictable and documented.
